GPencil: Segment select mode doesn't work #75271

Closed
opened 2020-04-01 10:18:07 +02:00 by n1729 · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-30 22:07, hash: b555b8dedc
Worked: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca

Short description of error
Select Mode Points in Between doesn't work.

Exact steps for others to reproduce the error

  1. Draw something in draw mode
  2. Go to edit mode and click the Points in Between selection button in the header
  3. Try to select some points between other strokes
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-30 22:07, hash: `b555b8dedc` Worked: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` **Short description of error** Select Mode `Points in Between` doesn't work. **Exact steps for others to reproduce the error** 1) Draw something in draw mode 2) Go to edit mode and click the `Points in Between` selection button in the header 3) Try to select some points between other strokes
Author

Added subscriber: @n1729

Added subscriber: @n1729
Member

Added subscribers: @antoniov, @lichtwerk

Added subscribers: @antoniov, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

CC @antoniov: mind checking? Not sure if this deserves to be High priority?

Can confirm. CC @antoniov: mind checking? Not sure if this deserves to be High priority?
Philipp Oeser changed title from GPencil: Select Mode doesn't work to GPencil: Select Mode 'points between' doesn't work 2020-04-01 10:43:40 +02:00

Could you put me a screenshot of the menu/button option.

I don't use all days GPencil (just develop), so I'm unable to find the option you talking about.

Could you put me a screenshot of the menu/button option. I don't use all days GPencil (just develop), so I'm unable to find the option you talking about.
Author

The button name just comes from https://docs.blender.org/manual/en/dev/grease_pencil/selecting.html
Is this excellent one removed in the future? If so, I'm sad...
Blender 2020-04-01 19-58-52.mp4

The button name just comes from https://docs.blender.org/manual/en/dev/grease_pencil/selecting.html Is this excellent one removed in the future? If so, I'm sad... [Blender 2020-04-01 19-58-52.mp4](https://archive.blender.org/developer/F8441044/Blender_2020-04-01_19-58-52.mp4)

Ah, thanks... you mean segment select.

Ah, thanks... you mean segment select.
Antonio Vazquez self-assigned this 2020-04-01 15:45:16 +02:00
Antonio Vazquez changed title from GPencil: Select Mode 'points between' doesn't work to GPencil: Segment select mode doesn't work 2020-04-01 17:59:37 +02:00

This issue was referenced by c4374bc919

This issue was referenced by c4374bc919c6ae8162ce5724a51a360e3dd36bfa

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75271
No description provided.