Fix T75271: GPencil Segment select mode doesn't work

The selection was workring with the evaluated data, but need work with the original data.